fix border overflow

--- a/frontend/src/modules/helper/PostSubmission.css
+++ b/frontend/src/modules/helper/PostSubmission.css
@@ -277,6 +277,7 @@
 
 .custom-pages-selector select {
   padding-left: 15px;
+  max-width: 1129px;
 }
 
 .custom-page-controls {
